# os_dev

./: .gitignore  README.md
goose/: Cargo.toml  launch.sh
goose/.cargo/: config.toml
goose/src/: main.rs  vga_buffer.rs
gooseboot/: Cargo.toml  Makefile  README  comp_launch.sh  comp_launch_2.sh  goo.asm  gooseboots.asm  linker.ld
gooseboot/.cargo/: config.toml
gooseboot/asm_funcs/: check_cpuid.asm  check_long_mode.asm  disk_load.asm  gdt.asm  linker.ld  long_mode_gdt.asm  long_mode_paging_enable.asm  longmode_gdt.asm  longmode_prep.asm  switch_to_pm.asm
gooseboot/src/: main.rs
gooseboot/src/arch/x86_64/: gooseboot.asm
gooseboots/: comp_launch.sh  gooseboots.asm  hello_world.asm  long_mode_check.asm  print_hex.asm  print_string.asm  print_string_rm.asm  sector.asm
gooseboots_old/: cpuid_check.asm  disk_load.asm  gooseboots.asm
multi_gooseboot/: Cargo.toml
multi_gooseboot/src/: lib.rs
multi_gooseboot/src/arch/x86_64/: gooseboot.asm  long_mode_init.asm
research_docs/: barebones.txt  bootloader.txt  bootloader_highlevel_concepts.txt  gdt.txt  long_mode_is_hellll.txt  memory_management_notes.txt  segmentation.txt  vga_text_mode.txt  what_is_os.txt
test_dir/: _start.asm  kernel.asm  todo
