[package]
name = "goose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
#so our pub static WRITER can actually have saafe interior mutability without a mutex
spin = "0.5.2"

# so we can have a pub static WRITER
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
